--- a/css/Style.css
+++ b/css/Style.css
@@ -6,7 +6,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 .doguinho{
-	width: 75%;
+	width: 100%;
 	height: auto;
 	position: absolute;
     bottom: 0;
@@ -15,7 +15,7 @@ body {
 .left{
 	float: left;
 	height: 800px;
-	width: 45%;
+	width: 40%;
 	background-image: linear-gradient(to bottom, #edb506ff, #e7b107ff);
 	border-radius: 10px 0px 0px 10px;
 	margin-bottom: 100px;
@@ -38,7 +38,9 @@ body {
 	display: grid;
 	text-align: center;
 }
-input[name=input] {
+input[type=date],
+input[type=tel],
+input[type=text]{
 	width: 40%;
 	box-sizing: border-box;
 	border: 2px solid #ccc;
