--- a/css/StyleMensage.css
+++ b/css/StyleMensage.css
@@ -1,8 +1,3 @@
-.TabelaCrud{width: 100%; text-align: center;}
-    .TabelaCrud tr:nth-child(2n -1){background: #CCC;}
-    .TabelaCrud tr:first-child{background: #254abcff; color:#e7b107ff; font-weight: bold; font-size: 20px;}
-    .TabelaCrud td{width: 25%;}
-
     body {
         margin:100px;
         background-color: #254abcff;
@@ -11,9 +6,9 @@
     .right{
         float: right;
         width: 85%;
-        min-width: 500px;
-        padding: 50px 20px;
-        background-color: white;
+        height: 200px;
+        padding: 150px 20px;
+        background-image: linear-gradient(to bottom, #edb506ff, #e7b107ff);
         position: absolute;
         right: 0px;
         border-radius: 10px;
@@ -22,4 +17,6 @@
     }
     h1{
         text-align: center;
+        color: #ffffff !important;
+        font-size: 40px;
     }
